# social_media_limiter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.example.json  pyproject.toml
docs/: PROJECT_STATUS.md  SECURITY_GUIDE.md
docs/plans/: 2026-02-21-social-limiter-design.md
src/: __init__.py  app.py  blocker.py  config.py  override.py  state.py  tracker.py
tests/: __init__.py  test_config.py  test_state.py  test_tracker.py
